--- a/build.gradle
+++ b/build.gradle
@@ -171,7 +171,7 @@ bintray {
         issueTrackerUrl = 'https://github.com/briandilley/jsonrpc4j/issues'
         vcsUrl = 'git@github.com:briandilley/jsonrpc4j.git'
         githubRepo = 'briandilley/jsonrpc'
-        githubReleaseNotesFile = 'README.md'
+        githubReleaseNotesFile = 'README-yuanma.md'
         labels = ['json', 'rpc', 'java']
         publicDownloadNumbers = true
         version {
